--- a/package.json
+++ b/package.json
@@ -5,12 +5,21 @@
   "main": "index.js",
   "scripts": {
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "nodemon": "^2.0.7",
     "twitter": "^1.7.1"
+  },
+  "devDependencies": {
+    "concurrently": "^5.3.0"
   }
 }
