--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "lodash": "^4.17.20",
     "nodemon": "^2.0.7",
     "twitter": "^1.7.1"
   },
