--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,11 @@
 
 # dependencies
 /node_modules
+client/node_modules
 /.pnp
 .pnp.js
-
 # testing
-/coverage
+client/coverage
 
 # production
 /build
@@ -17,7 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.eslintcache
+client/.eslintcache
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
