--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
+    "heroku-postbuild": "cd client && npm && mpm run build",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
